@react-native-firebase/app, @react-native-firebase/perf, axios, lodash, react-native-paper, react-native-splash-screen, react-native-vector-icons npm's added

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ReactNativeStarterKit</string>
+    <string name="splash_name">React Native Starter Kit</string>
 </resources>
